Remove spurious override of GetInsets() that breaks layout.

Client area of views is now caluclated from GetInsets(), and the old way
dialogs were using GetInsets() to mean something completely different
has been fixed/changed, so there is no reason to override GetInsets() to
return zero. Removing the override fixes the layout of the dialog.

Bug: 916479
Change-Id: I586236a3cfadd08805a5df4f737c982102850077
Reviewed-on: https://chromium-review.googlesource.com/c/1405874
Reviewed-by: Ben Wells <benwells@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622106}
Former-commit-id: 3be571a2a76e58d88877fcabda8c5a8c75320202